--- a/git-test/test.html
+++ b/git-test/test.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Day la chuc nang gio hang</h1>
-    <h2>Thnah cong</h2>
+    gggggggg
 </body>
 </html>
